--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyBlog</title>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="6_69.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
     <h2>November 23 2015</h2>
